--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
+@import url("normalize.css");
+@import url("skeleton.css");
+
 html {
   background: rgb(253, 248, 203);
   background: linear-gradient(rgb(253, 248, 203), #fff);
-  height: 100vh;
+  min-height: 100%;
 }
 
 body {
@@ -22,33 +25,10 @@ body {
     Segoe UI Emoji,
     Segoe UI Symbol,
     Noto Color Emoji;
-  font-size: 16px;
-  letter-spacing: 0.1rem;
-  line-height: 1.6rem;
   margin: 0 auto;
   max-width: 600px;
   padding-top: 4rem;
   text-align: center;
-}
-
-h1,
-h2,
-h3,
-h3,
-h4,
-h5,
-h6 {
-  color: rgb(15, 23, 42);
-  padding: 0.4rem 0;
-}
-
-h1 {
-  font-size: 3rem;
-}
-
-h1 a {
-  color: #0f172a;
-  text-decoration: none;
 }
 
 img {
@@ -56,17 +36,18 @@ img {
   height: 260px;
 }
 
+h1,
+h2 {
+  color: rgb(15, 23, 42);
+}
+
+h1 a {
+  color: #0f172a;
+  text-decoration: none;
+}
+
 a {
   color: #334155;
-}
-
-ul {
-  padding: 0;
-  list-style: none;
-}
-
-footer {
-  padding-top: 1rem;
 }
 
 ul {
@@ -74,8 +55,11 @@ ul {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+
+  padding: 0;
+  list-style: none;
 }
 
 li {
-  padding: 0 0.4rem;
+  padding: 0 1rem;
 }
