--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,15 @@ h1 a {
   text-decoration: none;
 }
 
+h1 a:hover {
+  color: #0f172a;
+}
+
 a {
+  color: #334155;
+}
+
+a:hover {
   color: #334155;
 }
 
